--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,12 @@
 #
 # url is site domain, full URL to the production location of your collection
 # on GitHub Pages follows the pattern username.github.io
-#url: https://LWCarney.github.io 
+#url: https://lwcarney.github.io 
 # baseurl is path to location on the domain if necessary e.g. /digital/hjccc
 # on GitHub Pages it is your github repository's name prefixed with a /
 #baseurl: /muskuyarchive
 # location of code, the full url to your github repository
-source-code: https://github.com/LWCarney/muskuyarchive
+source-code: https://lwcarney.github.io/muskuyarchive/
 
 ##########
 # SITE SETTINGS
