--- a/_config.yml
+++ b/_config.yml
@@ -20,14 +20,14 @@ source-code: https://lwcarney.github.io/muskuyarchive/
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: CollectionBuilder-GH 
+title: Muskuy Yachay Archives
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: a template for creating simple digital exhibits
+tagline: Materials related to Kichwa-language muskuy narratives of Runa peoples
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "CollectionBuilder-GH is a template for creating small digital collection exhibits on GitHub Pages designed for teaching digital library skills"
+description: "This collection includes audiovisual, textual, and image files from the Lisa W. Carney's doctoral dissertation research"
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
-author: CollectionBuilder
+author: Lisa W. Carney, Ph.D.
 
 ##########
 # COLLECTION SETTINGS
@@ -50,7 +50,7 @@ metadata: muskuy_yachay_archive_metadata
 # ROBOTS EXCLUDE
 #
 # set noindex to true if you do NOT want Google to index your site
-# noindex: true 
+noindex: true 
 
 ##########
 # BUILD SETTINGS 
