--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: Muskuy Yachay Archives
 tagline: Materials related to Kichwa-language muskuy narratives of the Runa of Ecuaor
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "This collection includes audiovisual, textual, and image files from the Lisa W. Carney's doctoral dissertation "By the Authority of Dreams: Trutha and Knowledge in Kichwa Muskuy Narratives"
+description: "This collection includes audiovisual, textual, and image files from the Lisa W. Carney's doctoral dissertation By the Authority of Dreams: Trutha and Knowledge in Kichwa Muskuy Narratives"
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: Lisa W. Carney, Ph.D.
 
